# AudioLab

./: .gitignore  .gitmodules  guitarToSynth.dsp  noteDetector.dsp  readme.md  testingPatch.maxpat
FAUST/: buildCommandLine.txt  testingPatch.maxpat
FAUST/lib/: effects.lib  filters.lib  jlpFilters.lib  jlpLibs.lib  math.lib  matrix.lib  mixer.lib  reverbtool.lib  structure.lib  waveshaper.lib
FAUST/tools/: faustMinimalInlined.h
Pd/: stereoToLCR.pd
cpp/: CMakeLists.txt  README.MD  global.h
cpp/buffering/: AudioBuffer.hpp  AudioBuffer.tpp  audio_buffer.hpp  audio_buffer.tpp
cpp/controls/: lfo.cpp  lfo.h
cpp/filters/: biquad.h  filterdesign.cpp  filterdesign.h  onePoleSwitcher.cpp  onePoleSwitcher.h
cpp/memory/: circularBuffer.h  cursor.h
cpp/process_nodes/: ProcessNode.hpp  ProcessNode.tpp
dsp/Dynamic/: jlpCompressor.dsp
dsp/Filters/: phaseRotator.dsp
lib/: jlpDynamics.lib  jlpEnvelop.lib
projects/bela.PAM/: NOTE.md  README.md  TODO.md  build.py  deploy.py  query.py  render.cpp  requirements.txt  settings.json
projects/mini.PAM/: Makefile  README.md  TODO.MD  miniPAM.cpp
projects/pedalbrain/: README.md  TODO.md  main.py
projects/pedalthing/: README.md
python/: waveshaping-without-aliasing.py  wobbles-animations.py
python/AudioLab/: math.py
python/_tobesorted/: blop.py  hilbert_allpass.py  hilbert_elliptic_filter.py  iir-from-fir.py
python/channel-extraction/: center-extraction.py
python/filters/: crossover.py
python/machine_learning/: lesson_1.qmd
python/scripts/: TODO.md  deconvole_hp_from_recording.py  generate-impulse.py  (+3 more)
(+130 files in other folders)
